# launchdctl

./: .gitignore  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml
Formula/: launchdctl.rb
docs/: HOMEBREW.md
scripts/: brew-formula-bump.sh
src/launchdctl/: __init__.py  __main__.py  cli.py  config.py  console.py  controller.py  exceptions.py  models.py  py.typed  utils.py
