[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "launchdctl"
version = "1.0.2"
description = "Launch Daemon Controller for macOS launchd"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dmitry Ruban" }]
keywords = ["launchd", "macos", "cli", "daemon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = ["rich>=13.0", "build", "ruff"]

[project.scripts]
launchdctl = "launchdctl.cli:main"

[project.urls]
Homepage = "https://github.com/RuBAN-GT/launchdctl"
Repository = "https://github.com/RuBAN-GT/launchdctl"

[tool.hatch.build.targets.wheel]
packages = ["src/launchdctl"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/config.example.yaml",
    "/Formula",
    "/docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["launchdctl"]
